feat: add Tailwind CSS configuration and create initial component structure

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Red+Hat+Text:ital,wght@0,300..700;1,300..700&family=Rubik:ital,wght@0,300..900;1,300..900&display=swap');
 
-@import "tailwindcss";
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 @layer base {
   * {
@@ -59,32 +61,4 @@
   html {
     font-family: 'Rubik', sans-serif;
   }
-}
-
-@theme {
-  --color-purple: #A729F5;
-  --color-navy: #313E51;
-  --color-navy-dark: #3B4D66;
-  --color-grey: #626C7F;
-  --color-grey-light: #ABC1E1;
-  --color-white: #FFFFFF;
-  --color-white-light: #F4F6FA;
-  --color-green: #26D782;
-  --color-red: #EE5454;
-
-  --font-sans: 'Rubik', sans-serif;
-
-  --font-size-heading-l: 4rem;
-  --font-size-heading-m: 2.25rem;
-  --font-size-heading-s: 1.25rem;
-  --font-size-body-m: 1.125rem;
-  --font-size-body-s: 0.875rem;
-
-  --font-weight-normal: 400;
-  --font-weight-medium: 500;
-  --font-weight-bold: 700;
-
-  --line-height-heading-l: 4.5rem;
-  --line-height-heading-m: 2.75rem;
-  --line-height-heading-s: 1.5rem;
 }
